fixing align items on sign up button

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ p{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     max-width: auto;
 }
 
